# backend

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
00_backlog/: workDetail.txt
Docs/md/: API명세서_v1.0.0.md
app/: config.py  db.py  main.py
app/api/: dependencies.py
app/core/: config.py  responses.py
app/models/: parts.py
app/routers/: auth.py  dashboard.py  extension.py  gallery.py  health.py  parts.py  prompts.py
app/schemas/: parts.py
